[gd_scene load_steps=11 format=3 uid="uid://biecc2dyb17oc"]

[ext_resource type="Script" path="res://scripts/room_manager.gd" id="1_1xhhn"]
[ext_resource type="Script" path="res://scenes/Level_3/level_3.gd" id="1_wwnao"]
[ext_resource type="PackedScene" uid="uid://bojiimcxylcw7" path="res://scenes/player.tscn" id="2_qtdk5"]
[ext_resource type="Texture2D" uid="uid://dkdtycvhteiqh" path="res://assets/healthbarUnder.png" id="3_dq7fy"]
[ext_resource type="Texture2D" uid="uid://4r0or36ccvjg" path="res://assets/healthbarProgress.png" id="4_40bl7"]
[ext_resource type="Script" path="res://scenes/Level_1/scripts/health.gd" id="5_5snm0"]
[ext_resource type="FontFile" uid="uid://cnbae18fxsbpb" path="res://assets/Fonts/Raw/VCR_OSD_MONO_1.001.ttf" id="7_gp2v4"]
[ext_resource type="Texture2D" uid="uid://dbb318wf311gh" path="res://assets/[CITYPNG.COM]HD Red Pixel Art Heart Icon Transparent PNG - 2500x2500.png" id="7_jlo6f"]
[ext_resource type="FontFile" uid="uid://bma6mtaigioet" path="res://assets/Fonts/Raw/Pixellari.ttf" id="7_ug3rx"]
[ext_resource type="AudioStream" uid="uid://4x83bn187dve" path="res://assets/Music/Level3.mp3" id="8_44i7s"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_wwnao")

[node name="RoomContainer" type="Node2D" parent="."]

[node name="RoomManager" type="Node" parent="."]
script = ExtResource("1_1xhhn")

[node name="Player" parent="." instance=ExtResource("2_qtdk5")]
position = Vector2(-1, 182)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(3.5, 3.5)
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Health" type="TextureProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("player")]
offset_left = 61.0
offset_top = 23.0
offset_right = 125.0
offset_bottom = 33.0
scale = Vector2(4, 4)
texture_under = ExtResource("3_dq7fy")
texture_progress = ExtResource("4_40bl7")
script = ExtResource("5_5snm0")
player = NodePath("../../Player")
metadata/_edit_use_anchors_ = true

[node name="Score" type="Label" parent="CanvasLayer"]
offset_left = 17.0
offset_top = 85.0
offset_right = 158.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("7_gp2v4")
theme_override_font_sizes/font_size = 30
text = "Score: 0"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 14.0
offset_top = 4.0
offset_right = 94.0
offset_bottom = 84.0
texture = ExtResource("7_jlo6f")
expand_mode = 1

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="TransitionRect" type="ColorRect" parent="TransitionLayer"]
offset_left = 1183.0
offset_top = -28.0
offset_right = 2377.0
offset_bottom = 667.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer2"]
visible = false
offset_left = 166.0
offset_top = 253.0
offset_right = 966.0
offset_bottom = 396.0
theme_override_fonts/font = ExtResource("7_ug3rx")
theme_override_font_sizes/font_size = 100
text = "STAGE CLEAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_44i7s")
autoplay = true
parameters/looping = false
